--- a/CONTINUATOS/Cube_TALLER.html
+++ b/CONTINUATOS/Cube_TALLER.html
@@ -657,11 +657,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 167px; height: 45px;
-        -ms-transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
-        transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
+#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 182px; height: 48px;
+        -ms-transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
+        transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
@@ -748,14 +748,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(124px, 218px) rotate(0deg);
         transform: translate(0, 0) translate(124px, 218px) rotate(0deg);
 }
-/*#/#*//*#i5.i372.image.css:image/base/css*/
-#i372 { opacity: 1; }
-/*#/#*//*#i372.i373.positioning.css:positioning/base/css.2*/
-#i372 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 167px; height: 45px;
-        -ms-transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
-        transform: translate(0, 0) translate(64px, 141px) rotate(0deg);
+/*#/#*//*#i5.i380.image.css:image/base/css*/
+#i380 { opacity: 1; }
+/*#/#*//*#i380.i381.positioning.css:positioning/base/css.2*/
+#i380 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 182px; height: 48px;
+        -ms-transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
+        transform: translate(0, 0) translate(56px, 138px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -824,15 +824,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(124px, 218px) rotate(0deg);
         transform: translate(0, 0) translate(124px, 218px) rotate(0deg);
 }
-/*#/#*//*#i6.i374.image.css:image/base/css*/
-#i374 { opacity: 1; }
-/*#/#*//*#i374.i375.positioning.css:positioning/base/css.2*/
-#i374 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 167px; height: 45px;
-        -ms-transform: translate(0, 0) translate(64px, 124px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(64px, 124px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(64px, 124px) rotate(0deg);
-        transform: translate(0, 0) translate(64px, 124px) rotate(0deg);
-}
 /*#/#*//*#i6.i370.image.css:image/base/css*/
 #i370 { opacity: 1; }
 /*#/#*//*#i370.i371.positioning.css:positioning/base/css.2*/
@@ -841,6 +832,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(135px, 172px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(135px, 172px) rotate(0deg);
         transform: translate(0, 0) translate(135px, 172px) rotate(0deg);
+}
+/*#/#*//*#i6.i382.image.css:image/base/css*/
+#i382 { opacity: 1; }
+/*#/#*//*#i382.i383.positioning.css:positioning/base/css.2*/
+#i382 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 182px; height: 48px;
+        -ms-transform: translate(0, 0) translate(56px, 123px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(56px, 123px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(56px, 123px) rotate(0deg);
+        transform: translate(0, 0) translate(56px, 123px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -916,7 +916,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/W6KF5S3.gif"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/c9DGknC.png"/>
+<img id="i286" src="https://i.imgur.com/3xrg30k.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/mgV7wMV.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -939,8 +939,8 @@ url('fonts/') format('svg');
 <img id="i58" src="https://i.imgur.com/LmV0waf.jpg"/>
 <!--#/#--><!--#i5.i340.image.html:image/html-->
 <img id="i340" src="https://i.imgur.com/mgV7wMV.png"/>
-<!--#/#--><!--#i5.i372.image.html:image/html-->
-<img id="i372" src="https://i.imgur.com/c9DGknC.png"/>
+<!--#/#--><!--#i5.i380.image.html:image/html-->
+<img id="i380" src="https://i.imgur.com/3xrg30k.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i342.image.html:image/html-->
@@ -959,10 +959,10 @@ url('fonts/') format('svg');
 <img id="i60" src="https://i.imgur.com/oAiMzgn.jpg"/>
 <!--#/#--><!--#i6.i356.image.html:image/html-->
 <img id="i356" src="https://i.imgur.com/mgV7wMV.png"/>
-<!--#/#--><!--#i6.i374.image.html:image/html-->
-<img id="i374" src="https://i.imgur.com/c9DGknC.png"/>
 <!--#/#--><!--#i6.i370.image.html:image/html-->
 <img id="i370" src="https://i.imgur.com/JIhFzGe.gif"/>
+<!--#/#--><!--#i6.i382.image.html:image/html-->
+<img id="i382" src="https://i.imgur.com/3xrg30k.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i358.image.html:image/html-->
@@ -1027,7 +1027,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i288.i289.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1044,7 +1044,7 @@ var el = document.getElementById('i190');
 
 el.addEventListener('click', function(e){
     /*#i290.i291.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1061,7 +1061,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1078,7 +1078,7 @@ var el = document.getElementById('i242');
 
 el.addEventListener('click', function(e){
     /*#i294.i295.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1096,17 +1096,17 @@ if ('click' === 'click') {
 
 /*#/#*//*#i340.i341.positioning.js:positioning/base/js.2*/
 bmShow('i340');
-/*#/#*//*#i5.i372.image.js:image/base/js*/
+/*#/#*//*#i5.i380.image.js:image/base/js*/
 
-/*#/#*//*#i372.i373.positioning.js:positioning/base/js.2*/
-bmShow('i372');
+/*#/#*//*#i380.i381.positioning.js:positioning/base/js.2*/
+bmShow('i380');
 /*#/#*//*#i95.i312.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i312.i313.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1123,7 +1123,7 @@ var el = document.getElementById('i342');
 
 el.addEventListener('click', function(e){
     /*#i344.i345.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1140,7 +1140,7 @@ var el = document.getElementById('i346');
 
 el.addEventListener('click', function(e){
     /*#i348.i349.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1157,7 +1157,7 @@ var el = document.getElementById('i350');
 
 el.addEventListener('click', function(e){
     /*#i352.i353.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1175,14 +1175,14 @@ if ('click' === 'click') {
 
 /*#/#*//*#i356.i357.positioning.js:positioning/base/js.2*/
 bmShow('i356');
-/*#/#*//*#i6.i374.image.js:image/base/js*/
-
-/*#/#*//*#i374.i375.positioning.js:positioning/base/js.2*/
-bmShow('i374');
 /*#/#*//*#i6.i370.image.js:image/base/js*/
 
 /*#/#*//*#i370.i371.positioning.js:positioning/base/js.2*/
 bmShow('i370');
+/*#/#*//*#i6.i382.image.js:image/base/js*/
+
+/*#/#*//*#i382.i383.positioning.js:positioning/base/js.2*/
+bmShow('i382');
 /*#/#*//*#i99.i336.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
@@ -1206,7 +1206,7 @@ var el = document.getElementById('i358');
 
 el.addEventListener('click', function(e){
     /*#i360.i361.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1223,7 +1223,7 @@ var el = document.getElementById('i362');
 
 el.addEventListener('click', function(e){
     /*#i364.i365.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1240,7 +1240,7 @@ var el = document.getElementById('i366');
 
 el.addEventListener('click', function(e){
     /*#i368.i369.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.co/servicio_posventa/agendamiento_taller/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1341,10 +1341,10 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i340.i341.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i372.image.meta:image/meta*/
+/*#/#*//*#i5.i380.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i372.i373.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i380.i381.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1381,15 +1381,15 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i356.i357.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i374.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i374.i375.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i370.image.meta:image/meta*/
 name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i370.i371.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i382.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i382.i383.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
