--- a/CONTINUATOS/Venetian.html
+++ b/CONTINUATOS/Venetian.html
@@ -2167,15 +2167,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(139px, 447px) rotate(0deg);
         transform: translate(0, 0) translate(139px, 447px) rotate(0deg);
 }
-/*#/#*//*#i46.image.css:image/base/css*/
-#i46 { opacity: 1; }
-/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 176px; height: 47px;
-        -ms-transform: translate(0, 0) translate(70px, 330px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(70px, 330px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(70px, 330px) rotate(0deg);
-        transform: translate(0, 0) translate(70px, 330px) rotate(0deg);
-}
 /*#/#*//*#i95.image.css:image/base/css*/
 #i95 { opacity: 1; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.2*/
@@ -2185,28 +2176,44 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(136px, 379px) rotate(0deg);
         transform: translate(0, 0) translate(136px, 379px) rotate(0deg);
 }
+/*#/#*//*#i68.text.css:text/base/css*/
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 263px; height: 40px;
-        -ms-transform: translate(0, 0) translate(30px, 290px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(30px, 290px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(30px, 290px) rotate(0deg);
-        transform: translate(0, 0) translate(30px, 290px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(30px, 282px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(30px, 282px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(30px, 282px) rotate(0deg);
+        transform: translate(0, 0) translate(30px, 282px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 273px; height: 44px;
-        -ms-transform: translate(0, 0) translate(22px, 259px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(22px, 259px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(22px, 259px) rotate(0deg);
-        transform: translate(0, 0) translate(22px, 259px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(22px, 255px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(22px, 255px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(22px, 255px) rotate(0deg);
+        transform: translate(0, 0) translate(22px, 255px) rotate(0deg);
 }
+/*#/#*//*#i105.image.css:image/base/css*/
+#i105 { opacity: 1; }
 /*#/#*//*#i105.i106.positioning.css:positioning/base/css.2*/
 #i105 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 480px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i46.image.css:image/base/css*/
+#i46 { opacity: 1; }
+/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 184px; height: 49px;
+        -ms-transform: translate(0, 0) translate(67px, 316px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(67px, 316px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(67px, 316px) rotate(0deg);
+        transform: translate(0, 0) translate(67px, 316px) rotate(0deg);
+}
+/*#/#*//*#i81.shape.css:shape/base/css*/
+#i81 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2266,15 +2273,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i105.image.css:image/base/css*/
-#i105 { opacity: 1; }
-/*#/#*//*#i81.shape.css:shape/base/css*/
-#i81 { background-color: #dedede; opacity: 0.00;
-}
 /*#/#*//*#i81.i82.positioning.css:positioning/base/css.2*/
 #i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 28.75%;
+        -ms-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
+}
+/*#/#*//*#i70.i71.positioning.css:positioning/base/css.2*/
+#i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 28.75%;
         -ms-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
@@ -2289,13 +2296,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i70.i71.positioning.css:positioning/base/css.2*/
-#i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 28.75%;
-        -ms-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 342px) rotate(0deg);
 }
 /*#/#*//*#i89.image.css:image/base/css*/
 #i89 { opacity: 1; }
@@ -2346,8 +2346,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i74" src="https://i.imgur.com/kIpIIqg.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/mgV7wMV.png"/>
-<!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/h9Fetzh.png"/>
 <!--#/#--><!--#i95.image.html:image/html-->
 <img id="i95" src="https://i.imgur.com/JIhFzGe.gif"/>
 <!--#/#--><!--#i68.text.html:text/html-->
@@ -2356,6 +2354,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i63">Haz que sea tuyo.</div>
 <!--#/#--><!--#i105.image.html:image/html-->
 <img id="i105" src="https://i.imgur.com/kZThkuS.png"/>
+<!--#/#--><!--#i46.image.html:image/html-->
+<img id="i46" src="https://i.imgur.com/oKzzcnZ.png"/>
 <!--#/#--><!--#i81.shape.html:shape/html-->
 <div id="i81"></div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
@@ -2441,10 +2441,6 @@ bmShow('i74');
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
-/*#/#*//*#i46.image.js:image/base/js*/
-
-/*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
-bmShow('i46');
 /*#/#*//*#i95.image.js:image/base/js*/
 
 /*#/#*//*#i95.i96.positioning.js:positioning/base/js.2*/
@@ -2457,6 +2453,10 @@ bmShow('i63');
 
 /*#/#*//*#i105.i106.positioning.js:positioning/base/js.2*/
 bmShow('i105');
+/*#/#*//*#i46.image.js:image/base/js*/
+
+/*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
+bmShow('i46');
 /*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
 bmShow('i81');
 /*#/#*//*#i81.i85.actions.js:actions/base/js.1*/
@@ -2466,21 +2466,6 @@ var el = document.getElementById('i81');
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/ZnxoUZpRvtKMs6YR9'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
-bmShow('i79');
-/*#/#*//*#i79.i83.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i79');
-
-el.addEventListener('click', function(e){
-    /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2502,6 +2487,21 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
+bmShow('i79');
+/*#/#*//*#i79.i83.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i79');
+
+el.addEventListener('click', function(e){
+    /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.continautos.co/test_drive/formulario_test_drive/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i89.image.js:image/base/js*/
 
 /*#/#*//*#i89.i90.positioning.js:positioning/base/js.2*/
@@ -2512,7 +2512,7 @@ var el = document.getElementById('i89');
 
 el.addEventListener('click', function(e){
     /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.continautos.co/test_drive/formulario_test_drive/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2529,7 +2529,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.continautos.co/test_drive/formulario_test_drive/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2546,7 +2546,7 @@ var el = document.getElementById('i93');
 
 el.addEventListener('click', function(e){
     /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.continautos.co/test_drive/formulario_test_drive/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2594,11 +2594,6 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i46.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i95.image.meta:image/meta*/
 name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -2616,6 +2611,11 @@ data: /*!*/{}/*!*/;
 name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i105.i106.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i46.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i81.shape.meta:shape/meta*/
 name: LINK MAPA;
