--- a/CONTINUATOS/Venetian.html
+++ b/CONTINUATOS/Venetian.html
@@ -2339,7 +2339,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i76.slice-image.html:slice-image/html.1-->
 <dataimg id="i76" src="https://i.imgur.com/WLSEsQv.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/CHMH09m.gif"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/4mAjEK8.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i74.image.html:image/html-->
@@ -2581,7 +2581,7 @@ name: eflNQCV.jpg; fileId: ; sourceTypeId: externalUrl;
 name: WLSEsQv.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: CHMH09m.gif; fileId: ; sourceTypeId: externalUrl;
+name: 4mAjEK8.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i74.image.meta:image/meta*/
