--- a/Beat/Fade320x480.html
+++ b/Beat/Fade320x480.html
@@ -332,7 +332,7 @@
             z-index: 5;
             margin-left: 46%;
             left: -55px;
-            background-color: #3bb8b4;
+            background-color: #23d2aa;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
