cube y venetian con video

--- a/PETCO_2/CUBE/main/Cube.html
+++ b/PETCO_2/CUBE/main/Cube.html
@@ -945,7 +945,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Consigue los mejores descuentos para tu mascota</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/dJ6GLGN.jpg"/>
+<img id="i130" src="https://i.imgur.com/wAZD0eo.gif"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/x24CapG.png"/>
 <!--#/#--><!--#i4.i260.image.html:image/html-->
