--- a/PETCO_2/VENETIAN/main/Venetian.html
+++ b/PETCO_2/VENETIAN/main/Venetian.html
@@ -2311,10 +2311,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i89" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
-    <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/ChtaLQz.jpg"></dataimg>
-<!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
+    <!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/1iK7XQl.jpg"></dataimg>
+<!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
+<dataimg id="i4" src="https://i.imgur.com/HRlwjm7.gif"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/cHehzHM.jpg"></dataimg>
 <!--#/#-->
@@ -2385,9 +2385,9 @@ document.addEventListener('DOMContentLoaded', function() {
         setInterval(next, 5000);
 /*End Automatic Function*/
 });
-/*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
-
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
@@ -2414,21 +2414,6 @@ bmShow('i16');
 bmShow('i46');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
-bmShow('i81');
-/*#/#*//*#i81.i85.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i81');
-
-el.addEventListener('click', function(e){
-    /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.google.com/maps/place/Manuel+Gonzalez+113,+San+Sim%C3%B3n+Tolnahuac,+06920+Ciudad+de+M%C3%A9xico,+CDMX,+M%C3%A9xico/@19.4559506,-99.1442151,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1f921db1ddfa5:0x317f02b7d7be8b50!8m2!3d19.4559506!4d-99.1420264'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
 bmShow('i79');
 /*#/#*//*#i79.i83.actions.js:actions/base/js.1*/
@@ -2438,6 +2423,21 @@ var el = document.getElementById('i79');
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.petco.com.mx/petco/en/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
+bmShow('i81');
+/*#/#*//*#i81.i85.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i81');
+
+el.addEventListener('click', function(e){
+    /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.google.com/maps/place/Manuel+Gonzalez+113,+San+Sim%C3%B3n+Tolnahuac,+06920+Ciudad+de+M%C3%A9xico,+CDMX,+M%C3%A9xico/@19.4559506,-99.1442151,17z/data=!3m1!4b1!4m5!3m4!1s0x85d1f921db1ddfa5:0x317f02b7d7be8b50!8m2!3d19.4559506!4d-99.1420264'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2525,10 +2525,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
-/*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: ChtaLQz.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: 1iK7XQl.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
+name: HRlwjm7.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: cHehzHM.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
